ADD static file integration for picture and resume

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -2,6 +2,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    {% load static %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -91,8 +92,8 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
               <a class="nav-link" aria-current="page" href="https://github.com/joshuaramat">GitHub</a>
-              <a class="nav-link" href="#">Resume</a>
-              <a class="nav-link" href="#">Blog</a>
+              <a class="nav-link" href="{% static 'JoshuaRamatResume.pdf' %}">Resume</a>
+              <a class="nav-link" href="/blog">Blog</a>
             </div>
           </div>
         </div>
@@ -111,6 +112,7 @@
               <a href="https://www.linkedin.com/in/joshuaramat/" class="btn btn-primary my-2">My LinkedIn</a>
               <a href="mailto:ramatjoshua@gmail.com" class="btn btn-secondary my-2">E-mail Me!</a>
             </p>
+            <img class="img-fluid" src="{% static 'joshua.JPG' %}" height=300 />
           </div>
         </div>
       </section>
