--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -2,6 +2,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    {% load static %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -91,7 +92,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
               <a class="nav-link" aria-current="page" href="https://github.com/joshuaramat">GitHub</a>
-              <a class="nav-link" href="#">Resume</a>
+              <a class="nav-link" href="{% static 'JoshuaRamatResume.pdf' %}">Resume</a>
               <a class="nav-link active" href="/blog">Blog</a>
             </div>
           </div>
