--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -85,7 +85,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Joshua Ramat</a>
+          <a class="navbar-brand" href="{% url 'home' %}">Joshua Ramat</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -93,7 +93,7 @@
             <div class="navbar-nav ms-auto">
               <a class="nav-link" aria-current="page" href="https://github.com/joshuaramat">GitHub</a>
               <a class="nav-link" href="{% static 'JoshuaRamatResume.pdf' %}">Resume</a>
-              <a class="nav-link active" href="/blog">Blog</a>
+              <a class="nav-link active" href="{% url 'allblogs' %}">Blog</a>
             </div>
           </div>
         </div>
@@ -106,15 +106,16 @@
         <h2>Latest Posts</h2>
         <hr />
         {% for blog in blogs.all %}
-            <a href=""><h3>{{ blog.title }}</h3></a>
+            <a href="{% url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
             <p>{{ blog.pub_date_pretty }}</p>
-            <img class="img-fluid" src="{{ blog.image.url }}" height=400 width=600 />
+            <img class="img-fluid rounded" src="{{ blog.image.url }}" height=400 width=600 />
             <p>{{ blog.summary }}</p>
         {% endfor %}
       </div>
     </main>
 
     <footer class="text-muted py-5">
+      <hr />
       <div class="container text-end">
         <p>© {% now "Y" %} Joshua Ramat</p>
       </div>
