--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -85,7 +85,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Joshua Ramat</a>
+          <a class="navbar-brand" href="{% url 'home' %}">Joshua Ramat</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -93,7 +93,7 @@
             <div class="navbar-nav ms-auto">
               <a class="nav-link" aria-current="page" href="https://github.com/joshuaramat">GitHub</a>
               <a class="nav-link" href="{% static 'JoshuaRamatResume.pdf' %}">Resume</a>
-              <a class="nav-link" href="/blog">Blog</a>
+              <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
             </div>
           </div>
         </div>
@@ -112,7 +112,7 @@
               <a href="https://www.linkedin.com/in/joshuaramat/" class="btn btn-primary my-2">My LinkedIn</a>
               <a href="mailto:ramatjoshua@gmail.com" class="btn btn-secondary my-2">E-mail Me!</a>
             </p>
-            <img class="img-fluid" src="{% static 'joshua.JPG' %}" height=300 />
+            <img class="rounded-circle" src="{% static 'joshua.JPG' %}" height=300 />
           </div>
         </div>
       </section>
@@ -125,7 +125,7 @@
             {% for job in jobs.all %}
               <div class="col">
                 <div class="card shadow-sm">
-                  <img class="bd-placeholder-img card-img-top" src="{{ job.image.url }}" />
+                  <img class="bd-placeholder-img card-img-top rounded" src="{{ job.image.url }}" />
                   <div class="card-body">
                     <p class="card-text">{{ job.summary }}</p>
                   </div>
@@ -138,6 +138,7 @@
     </main>
 
     <footer class="text-muted py-5">
+      <hr />
       <div class="container text-end">
         <p>© {% now "Y" %} Joshua Ramat</p>
       </div>
